Raids controller, with Raids#index

--- a/app/views/layouts/poison.html.erb
+++ b/app/views/layouts/poison.html.erb
@@ -24,7 +24,8 @@
 	<p class="home">{MAIN_MENU2}</p>
 
 	<p>
-	 <%= link_to 'Standings', members_path %>
+	 <%= link_to 'Standings', members_path %> |
+	 <%= link_to 'Raids', raids_path %>
 	</p>
 </div>
 <%= yield %>
