--- a/app/views/raids/index.html.erb
+++ b/app/views/raids/index.html.erb
@@ -2,6 +2,7 @@
   <thead>
   <tr>
     <th>Date</th>
+    <th class="right">Attendees</th>
     <th>Note</th>
   </tr>
   </thead>
@@ -10,6 +11,7 @@
   <% for raid in @raids %>
     <tr class="<%= cycle('row1','row2') %>">
       <td><%= link_to h(raid.date), raid_path(raid) %></td>
+      <td class="right"><%=h raid.attendees.count %></td>
       <td><%=h raid.note %></td>
     </tr>
   <% end %>
