--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -16,7 +16,7 @@
   <% for attendee in @member.attendees %>
     <tr class="<%= cycle('row1','row2') %>">
       <td><%= link_to h(attendee.raid.date), raid_path(attendee.raid) %></td>
-      <td class="right"><%= number_with_precision(attendee.attendance, :precision => 2) %></td>
+      <td class="right"><%= raid_attendance_colored(attendee.attendance) %></td>
       <td><%=h attendee.raid.note %></td>
       <td class="center"><%=h attendee.raid.thread %></td>
     </tr>
