--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,4 +1,7 @@
 <h2><%=h @member.name %></h2>
+30-Day: <%= member_attendance_colored(@member.attendance_30) %><br/>
+90-Day: <%= member_attendance_colored(@member.attendance_90) %><br/>
+Lifetime: <%= member_attendance_colored(@member.attendance_lifetime) %><br/>
 
 <h3>Raids</h3>
 
