--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -2,7 +2,6 @@
   <thead>
   <tr>
     <th>Name</th>
-    <th>Class</th>
     <th>LF</th>
     <th>First Raid</th>
     <th>Last Raid</th>
@@ -15,8 +14,7 @@
   <tbody>
   <% for member in @members %>
     <tr class="<%= cycle('row1','row2') %>">
-      <td><%= link_to h(member.name), member_path(member) %></td>
-      <td><span class="<%=h member.wow_class %>"><%=h member.wow_class %></span></td>
+      <td><%= link_to h(member.name), member_path(member), :class => member.wow_class %></td>
       <td><%=h member.lf %></td>
       <td><%=h member.first_raid %></td>
       <td><%=h member.last_raid %></td>
