--- a/public/stylesheets/overrides.css
+++ b/public/stylesheets/overrides.css
@@ -4,6 +4,11 @@ table {
   margin: 0;
 }
 
+th, td {
+  padding: 0 5px;
+  margin: 0;
+}
+
 th.right, td.right {
   text-align: right;
   padding-right: 5px;
