--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%=h @member.name %></h2>
+<h2><span class="<%=h @member.wow_class %>"><%=h @member.name %></span></h2>
 30-Day: <%= member_attendance_colored(@member.attendance_30) %><br/>
 90-Day: <%= member_attendance_colored(@member.attendance_90) %><br/>
 Lifetime: <%= member_attendance_colored(@member.attendance_lifetime) %><br/>
