--- a/app/views/layouts/poison.html.erb
+++ b/app/views/layouts/poison.html.erb
@@ -25,6 +25,7 @@
 
 	<p>
 	 <%= link_to 'Standings', members_path %> |
+	 <%= link_to 'Items', items_path %> |
 	 <%= link_to 'Raids', raids_path %>
 	</p>
 </div>
