--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -15,7 +15,7 @@
   <% for member in @members %>
     <tr class="<%= cycle('row1','row2') %>">
       <td><%= link_to h(member.name), member_path(member), :class => member.wow_class %></td>
-      <td class="right"><%=h member.lf %></td>
+      <td class="right"><%= number_with_precision(member.lf, :precision => 2) %></td>
       <td><%=h member.first_raid %></td>
       <td><%=h member.last_raid %></td>
       <td class="right"><%= member_attendance_colored(member.attendance_30) %></td>
