--- a/app/views/raids/show.html.erb
+++ b/app/views/raids/show.html.erb
@@ -13,7 +13,7 @@
   <tbody>
   <% for attendee in @raid.attendees %>
     <tr class="<%= cycle('row1','row2') %>">
-      <td><%= link_to h(attendee.member.name), member_path(attendee.member) %></td>
+      <td><%= link_to h(attendee.member.name), member_path(attendee.member), :class => attendee.member.wow_class %></td>
       <td class="right"><%= raid_attendance_colored(attendee.attendance) %></td>
     </tr>
   <% end %>
