- Add a member_link_colored helper method - Change <association>.count calls to <association>.size to take advantage of counter_cache

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,4 +1,4 @@
-<h2><span class="<%=h @member.wow_class %>"><%=h @member.name %></span></h2>
+<h2><%= member_link_colored(@member) %></h2>
 30-Day: <%= member_attendance_colored(@member.attendance_30) %><br/>
 90-Day: <%= member_attendance_colored(@member.attendance_90) %><br/>
 Lifetime: <%= member_attendance_colored(@member.attendance_lifetime) %><br/>
