--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -5,6 +5,8 @@
     <th class="right">LF</th>
     <th>First Raid</th>
     <th>Last Raid</th>
+    <th>Raid Count</th>
+    <th>Item Count</th>
     <th class="right">30-Day</th>
     <th class="right">90-Day</th>
     <th class="right">Lifetime</th>
@@ -14,10 +16,12 @@
   <tbody>
   <% for member in @members %>
     <tr class="<%= cycle('row1','row2') %>">
-      <td><%= link_to h(member.name), member_path(member), :class => member.wow_class %></td>
+      <td><%= member_link_colored(member) %></td>
       <td class="right"><%= number_with_precision(member.lf, :precision => 2) %></td>
       <td><%=h member.first_raid %></td>
       <td><%=h member.last_raid %></td>
+      <td><%=h member.raids.size %></td>
+      <td><%=h member.items.size %></td>
       <td class="right"><%= member_attendance_colored(member.attendance_30) %></td>
       <td class="right"><%= member_attendance_colored(member.attendance_90) %></td>
       <td class="right"><%= member_attendance_colored(member.attendance_lifetime) %></td>
