--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -47,7 +47,7 @@ Lifetime: <%= member_attendance_colored(@member.attendance_lifetime) %><br/>
     <tr class="<%= cycle('row1','row2') %><%= ' inclf' if item.affects_loot_factor? %>">
       <td><%= link_to h(item.name), item_path(item) %></td>
       <td><%= link_to h(item.raid.date), raid_path(item.raid) unless item.raid.nil? %></td>
-      <td class="right"><%= number_with_precision(item.price, :precision => 2) %></td>
+      <td class="right"><%= number_with_precision(item.adjusted_price, :precision => 2) %></td>
     </tr>
   <% end %>
   </tbody>
