--- a/app/views/raids/show.html.erb
+++ b/app/views/raids/show.html.erb
@@ -40,7 +40,7 @@
     <tr class="<%= cycle('row1','row2') %>">
       <td><%= link_to h(item.name), item_path(item) %></td>
       <td><%= member_link_colored(item.buyer) %></td>
-      <td class="right"><%= number_with_precision(item.price, :precision => 2) %></td>
+      <td class="right"><%= number_with_precision(item.adjusted_price, :precision => 2) %></td>
     </tr>
   <% end %>
   </tbody>
