--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -11,7 +11,7 @@
   <tbody>
   <% for item in @items %>
     <tr class="<%= cycle('row1','row2') %>">
-      <td><%= link_to h(item.name), item_path(item) %></td>
+      <td><%= link_to_item_with_stats(item) %></td>
       <td><%= link_to h(item.raid.date), raid_path(item.raid) unless item.raid.nil? %></td>
       <td><%= member_link_colored(item.member) %></td>
       <td class="right"><%= number_with_precision(item.price, :precision => 2) %></td>
