--- a/public/stylesheets/overrides.css
+++ b/public/stylesheets/overrides.css
@@ -52,3 +52,40 @@ fieldset label {
 #raid_form div.attendance_loot {
   padding: 1px 0;
 }
+
+/* Nav Bar Thingy */
+#navbar {
+  width: 100%;
+  height: 1.5em;
+}
+
+ul.tabs {
+  list-style: none;
+  padding: 0;
+}
+
+ul.tabs li {
+  display: inline;
+}
+
+ul.tabs li a {
+	background-color:#464c54;
+	color:#ffebb5;
+	padding:8px 14px 8px 14px;
+	text-decoration:none;
+	font-size:9px;
+	font-family:Verdana, Arial, Helvetica, sans-serif;
+	font-weight:bold;
+	text-transform:uppercase;
+	border:1px solid #464c54; 
+}
+ul.tabs li a:hover {
+	background-color:#2f343a;
+	border-color:#2f343a;
+}
+ul.tabs li a.active {
+	background-color:#ffffff;
+	color:#282e32;
+	border:1px solid #464c54; 
+	border-bottom: 1px solid #ffffff;
+}
