Paginate Items#index

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,5 @@
+<%= will_paginate @items %>
+
 <table border="0" cellspacing="0" cellpadding="0">
   <thead>
   <tr>
@@ -23,3 +25,5 @@
     
   </tfoot>
 </table>
+
+<%= will_paginate @items %>
